--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+.body {
   background-image: url("../imges/stadium-py.jpg");
   background-position: right top;
   background-size: cover;
