--- a/css/reserver.css
+++ b/css/reserver.css
@@ -29,6 +29,9 @@ html {
   padding: 100px 0;
 }
 
+span{
+  color: red;
+}
 .select-reservation .info-resrvation .row button{
   background-color: #efefef;
   margin: 10px;
@@ -45,4 +48,22 @@ html {
   border: none;
   background-color: #ddd;
   padding: 10px;
+}
+
+.select-reservation .info-resrvation form{
+  padding: 40px;
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+  background: #dee2e66b;
+}
+.select-reservation .info-resrvation form button{
+  color: white;
+  background-color: var(--mainColor);
+  border-color: var(--mainColor);
+  font-weight: bold;
+}
+.select-reservation .info-resrvation form button:hover {
+  background-color: white;
+  color: var(--mainColor);
+  border-color: var(--mainColor);
+  
 }
