--- a/css/style.css
+++ b/css/style.css
@@ -144,14 +144,18 @@ p {
   left: 40%;
   bottom: 133px;
   width: 228px;
-  height: 50px;
   background-color: var(--mainColor) !important;
   color: white;
   font-weight: bold;
+  padding: 12px;
+  border-radius: 30px;
 }
 .reservations .btn:hover {
   color: var(--mainColor) !important;
   background-color: white !important;
+}
+.reservations a {
+  margin-top: 20px !important;
 }
 /* End Reservations */
 
@@ -200,3 +204,5 @@ p {
   color: white;
 }
 /* End Footer */
+
+
